<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">116520179013900</string>
    <string name="app_name" >SawaTruck Driver</string>
    <string name="google_maps_key">AIzaSyBdcFOMoGhhKWB271MC8WWGDjocJPucszU</string>
    <string name="geo_api_key">AIzaSyBdcFOMoGhhKWB271MC8WWGDjocJPucszU</string>
    <string name="btn_post_ads">Post your Ads</string>
    <string name="title_post_ads">Post your Ads</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_change_password">Password Change</string>
    <string name="title_setting">Setting</string>
    <string name="title_search_load">Search for Loads</string>
    <string name="btn_save_search" >Save Search</string>
    <string name="dubai">Dubai</string>
    <string name="sidemenu_home">Home</string>
    <string name="sidemenu_myads">My Ads</string>
    <string name="sidemenu_mybids">My Bids</string>
    <string name="sidemenu_mytruck">My Truck</string>
    <string name="sidemenu_mybalance">My Balance</string>
    <string name="sidemenu_inbox">Inbox</string>
    <string name="sidemenu_myrating">My Rating</string>
    <string name="sidemenu_settings">Settings</string>
    <string name="sidemenu_todo">ToDo</string>
    <string name="sidemenu_logout">Log Out</string>
    <string name="password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_save" >SAVE</string>
    <string name="btn_applyFilter" >Apply</string>
    <string name="password_match_error">Password does not match</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="paypal">Paypal</string>
    <string name="credit_card">Credit/Debit Card</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expiration Date</string>
    <string name="card_holder_name" >Card Holder Name</string>
    <string name="hint_enter_balance">Enter Balance</string>
    <string name="cvv">CVV</string>
    <string name="btn_charge" >Charge</string>
    <string name="truck_type_item">Truck Type:</string>
    <string name="distance_item">Distance:</string>
    <string name="budget_item" >Budget:</string>
    <string name="available_item" >Available:</string>
    <string name="load_details_item">Load Details:</string>
    <string name="upload_date_item">Upload Date:</string>
    <string name="delivery_date_item">Delivery Date:</string>
    <string name="hint_type_message">Type a message here</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_class">Vehicle Class</string>
    <string name="vehicle_body">Vehicle Body</string>
    <string name="take_photo">Take a Photo</string>
    <string name="enter_currency">Currency</string>
    <string name="btn_accept" >Accept</string>
    <string name="btn_reject" >Reject</string>
    <string name="offer">Offer</string>
    <string name="your_balance">Your Balance</string>
    <string name="your_point">Your Point</string>
    <string name="promo_code">Promo Code</string>
    <string name="add_promo_code" >Add Promo Code</string>
    <string name="add_payment_method" >Add Payment Method</string>
    <string name="charge_balance">Charge your balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="btn_call" >Call</string>
    <string name="btn_message" >Message</string>
    <string name="tab_accepted">Accepted</string>
    <string name="tab_cancelled">Canceled</string>
    <string name="budget_price" >Budget Price</string>
    <string name="tab_booked">Booked</string>
    <string name="tab_opened">Opened</string>
    <string name="tab_my_ratings">My Ratings</string>
    <string name="tab_ratings">Ratings</string>
    <string name="how_was_delivery">How was the delivery?</string>
    <string name="hint_enter_comment">Enter Comment</string>
    <string name="btn_search" >Search</string>
    <string name="distance">Distance</string>
    <string name="setting_view_profile">View Profile</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_change_password">Change Password</string>
    <string name="setting_language">Language</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_rate_apps">Rate the apps</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobilephone">Mobile Phone</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="hint_companyname">Company Name(Optional)</string>
    <string name="hint_bio">Bio(Optional)</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="btn_continue" >Continue</string>
    <string name="notice_input_code">Please enter code sent on your phone </string>
    <string name="btn_ok" >Ok</string>
    <string name="btn_cancel" >Cancel</string>
    <string name="english">English</string>
    <string name="chinese" tools:ignore="UnusedResources">Chinese</string>
    <string name="arabic">Arabic</string>
    <string name="recipient_information">Recipient Information</string>
    <string name="sendbid">Send Your Bid</string>
    <string name="enter_different_price">Enter different price(optional)</string>
    <string name="enter_price">Enter the price</string>
    <string name="currency">AED</string>
    <string name="enter_savename">Enter the save name</string>
    <string name="radio_camera">Camera</string>
    <string name="radio_gallery">Gallery</string>
    <string name="camera_or_gallery" >Camera/Gallery</string>
    <string name="notify">Notify</string>
    <string name="btn_showmap" >Show Map</string>
    <string name="btn_submit" >Submit</string>
    <string name="btn_next" >Next</string>
    <string name="notice_guest"> <![CDATA[ <p> Hello<br><br>
        You can only see these <br> option if you are logged in, so <br>
        in order to get the most of this <br> app please login or create an <br> account.
    ]]></string>
    <string name="workhistory">Work History</string>
    <string name="verification">Verification</string>
    <string name="menu_terms">Terms</string>
    <string name="insurance_cover">Insurance Cover</string>
    <string name="activate" >Activate</string>
    <string name="account_create" >Account Create</string>
    <string name="last_login">Last Login</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="job">job</string>
    <string name="jobs">jobs</string>
    <string name="btn_login" >Log In</string>
    <string name="btn_register" >Create Account</string>
    <string name="btn_signin" >Sign In</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">OR</string>
    <string name="btn_signin_facebook" >Signin with facebook</string>
    <string name="btn_signin_google" >Signin with google</string>
    <string name="not_yet_account">I haven\'t account yet?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="radio_company">Company</string>
    <string name="radio_have_own_track">Have Own Track</string>
    <string name="btn_signup" >Signup</string>
    <string name="btn_signup_facebook" >Signup with Facebook</string>
    <string name="btn_signup_google" >Signup with google</string>
    <string name="terms">By Signing up with SawaTruck you agree to <b>terms and conditions</b></string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="delivery_confirmation">Delivery Confirmation</string>
    <string name="delivery_confirmation_code">Please enter the confirmation code received from receipient.</string>
    <string name="delivery_item">Delivery Item: </string>
    <string name="delivery_description">Delivery Description</string>
    <string name="btn_navigate" >Navigate</string>
    <string name="btn_delivery_details" >Delivery Details</string>
    <string name="search_for_city">Search for a city</string>
    <string name="search_for_location">Search for a location</string>
    <string name="class_item">Class:</string>
    <string name="body_item" >Body:</string>
    <string name="company_item">Company:</string>
    <string name="year_item">Year:</string>
    <string name="btn_add_truck" >Add truck</string>
    <string name="menu_color">Color</string>
    <string name="menu_company">Company</string>
    <string name="menu_pallet_number">Palette Number</string>
    <string name="menu_production_year">Production Year</string>
    <string name="menu_owner_name">Truck Owner Name</string>
    <string name="menu_owner_phone">Truck Owner Phone Number</string>
    <string name="menu_owner_identity">Truck Owner Identity</string>
    <string name="menu_owner_identity_source">Truck Owner Identity Source</string>
    <string name="menu_owner_identity_date">Truck Owner Identity Date</string>
    <string name="menu_model">Model</string>
    <string name="menu_insurance">Insurance</string>
    <string name="my_bids">My Bids</string>
    <string name="btn_cancel_delivery" >Cancel Delivery</string>
    <string name="btn_pickup_load" >Pickup Load</string>
    <string name="btn_arrived" >Arrived</string>
    <string name="load_date">Load Date</string>
    <string name="unload_date">Unload Date</string>
    <string name="load_location">Load Location</string>
    <string name="unload_location">Unload Location</string>
    <string name="saved_search">Saved Search</string>
    <string name="select_your_truck">Select Your Truck</string>
    <string name="search_for_loads">Search for Loads</string>
    <string name="tab_mapview">Map View</string>
    <string name="tab_listview">List View</string>
    <string name="select_location_from_map">Select location from map</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="btn_send_your_bids" >Send your bid</string>
    <string name="btn_confirm" >Confirm</string>
    <string name="btn_start" >Start</string>
    <string name="fare">Fare</string>
    <string name="btn_collect_payment" >Collect Payment</string>
    <string name="travel_summary">Travel Summary</string>
    <string name="details">Details</string>
    <string name="payment_type">Payment Type</string>
    <string name="card">Card</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="chk_negotiable">Negotiable</string>
    <string name="ad_availability" >Ad Availability</string>
    <string name="hours_24">24 hours</string>
    <string name="days_3">3 Days</string>
    <string name="days_7">7 Days</string>
    <string name="notice_confirm_arrival"> <![CDATA[ <p> Are you sure you have arrived at <br>
        the pickup location? If you click<br>
         continue direction to pickup<br>
         will end.
    ]]></string>
    <string name="enter_complain">Enter your complain</string>
    <string name="write_complain">Write your complain</string>
    <string name="btn_submit_complain">Submit Complain</string>
    <string name="signout_app">Do you want really log out?</string>
    <string name="spanish">Spanish</string>
    <string name="load_type">Load Type</string>
    <string name="truck_class">Truck Class</string>
    <string name="truck_type">Truck Type</string>
</resources>