<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.sawatruck.driver.view.design.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/load_type" />

                <Spinner
                    android:id="@+id/spin_loadType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.sawatruck.driver.view.design.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/truck_class" />

                <Spinner
                    android:id="@+id/spin_truckClass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.sawatruck.driver.view.design.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/truck_type" />

                <Spinner
                    android:id="@+id/spin_truckType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_applyfilter"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/sharp_round_button"
                android:padding="0dp"
                android:text="@string/btn_applyFilter"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>